# local-doc-intelligence

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: ground_truth.json
data/samples/: invoice_001.txt  invoice_002_commas.txt  invoice_003_no_vat.txt  invoice_004_bill_to_first.txt  invoice_005_noisy_ocr.txt  invoice_006_reverse_charges.txt  receipt_001_cafe.txt  receipt_002_vat.txt
docs/: benchmark_workflow.md  failure_analysis.md  portfolio_notes.md  project_structure.md
src/docintel/: __init__.py  cli.py  evaluation.py  pipeline.py  postprocess.py  schemas.py  synthetic.py  validation.py
src/docintel/extractors/: __init__.py  base.py  donut.py  factory.py  paddleocr.py  rapidocr.py  text.py
src/docintel/llm/: __init__.py  base.py  factory.py  heuristic.py  ollama.py  prompts.py
tests/: test_cli.py  test_evaluation.py  test_pipeline.py  test_postprocess.py  test_schema_validation.py  test_synthetic.py
