[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-doc-intelligence"
version = "0.1.0"
description = "Privacy-first local document intelligence for UK invoices and receipts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "pydantic>=2.7",
  "python-dateutil>=2.9",
  "requests>=2.32",
  "typer>=0.12",
  "rich>=13.7",
  "Pillow>=10.3"
]

[project.optional-dependencies]
ocr = [
  "rapidocr-onnxruntime>=1.4",
  "opencv-python>=4.5",
]
paddleocr = [
  "paddleocr>=2.7",
  "paddlepaddle>=2.6"
]
donut = [
  "torch>=2.3",
  "transformers>=4.42",
  "sentencepiece>=0.2"
]
ui = [
  "streamlit>=1.36",
  "rapidocr-onnxruntime>=1.4",
  "opencv-python>=4.5"
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10"
]

[project.scripts]
docintel = "docintel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docintel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
